first try of a logging level type

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,19 @@
 [tox]
-envlist = py26, py27, py33, py34
+envlist = py{26,27,33,34,py}, lint
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
 commands = py.test {posargs} tests/
 deps =
     pytest
+    pytest-bpdb
+    pytest-cov
+
+[testenv:lint]
+commands = flake8 click_utils tests
+deps = flake8
+
+[flake8]
+ignore = E203,E241
+max-line-length = 120
+#exclude = tests/*,fabfile.py,conf/*
+max-complexity = 10
