--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,16 @@
 
 language: python
 
-python:
-  - "3.4"
-  - "3.3"
-  - "2.7"
-  - "2.6"
-  - "pypy"
+env:
+  - TOXENV=py34
+  - TOXENV=py33
+  - TOXENV=py27
+  - TOXENV=py26
+  - TOXENV=pypy
+  - TOXENV=lint
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt
+install: pip install tox
 
 # command to run tests, e.g. python setup.py test
-script: python setup.py test
+script: tox
