--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist = py{26,27,33,34,py}, lint
 
 [testenv]
-commands = py.test {posargs} tests/
+commands =
+    py.test {posargs} --cov-report term-missing --cov-report html --cov click_utils tests/
 deps =
     pytest
     pytest-bpdb
