--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist = py{26,27,33,34,py}, lint
 
 [testenv]
+usedevelop = True
 commands =
     py.test {posargs} --cov-report term-missing --cov-report html --cov click_utils tests/
 deps =
