--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,9 +1,9 @@
 [bumpversion]
-current_version = 0.1.0.dev0
+current_version = 0.1.0
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z0-9]+))?
-serialize =
+serialize = 
 	{major}.{minor}.{patch}.{release}
 	{major}.{minor}.{patch}
 
@@ -13,7 +13,7 @@ serialize =
 
 [bumpversion:part:release]
 optional_value = gamma
-values =
+values = 
 	dev0
 	gamma
 
